Форма для добавления товара

--- a/Market/angular/creatingFormTemplate.html
+++ b/Market/angular/creatingFormTemplate.html
@@ -1,1 +1,5 @@
-Nothing here yet
+<h2>Добавить товар</h2>
+Введите название:<input ng-model="name"><br><br>
+Введите цену:<input ng-model="price"><br><br>
+Введите количество продукта в наличии:<input ng-model="amount"><br><br>
+<a href="#/products" class="thumb"><button ng-click="addProduct()">Добавить</button></a>
