Хранение информации в localStorage

--- a/Market/angular/creatingFormTemplate.html
+++ b/Market/angular/creatingFormTemplate.html
@@ -2,4 +2,4 @@
 Введите название:<input ng-model="name"><br><br>
 Введите цену:<input ng-model="price"><br><br>
 Введите количество продукта в наличии:<input ng-model="amount"><br><br>
-<button ng-click="addProduct(nameInput)">Добавить</button>
+<button ng-click="addProduct()">Добавить</button>
